integrador_2/My Car/mycar/src/main/java/com/example/mycar/error/AlquilerNoEncontradoException.java
package com.example.mycar.error;

public class AlquilerNoEncontradoException extends RuntimeException {
    public AlquilerNoEncontradoException(String mensaje) {
        super(mensaje);
    }
}

